2005-06-04  Audrius Meskauskas  <AudriusA@bluewin.ch>

	* gnu/testlet/org/omg/CORBA/ORB/NEC_Corporation_RF11.java:
	New tests.
	* gnu/testlet/org/omg/CORBA/ORB/RF11/A_except2.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/A_except2Helper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/A_except2Holder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/B.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/B_except.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/B_exceptHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/B_exceptHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/BHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/BHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_anyHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_anyHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_booleanHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_booleanHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_charHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_charHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_doubleHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_doubleHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_floatHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_floatHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_longHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_longHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_ObjectHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_ObjectHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_octetHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_octetHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_shortHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_shortHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_stringHelper.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_stringHolder.java,
	gnu/testlet/org/omg/CORBA/ORB/RF11/C_array_e_ulongHelper.java,