@@ -1,3 +1,9 @@
+2005-06-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* gnu/testlet/java/net/URI/ToStringTest.java:
+	New test for undefined/empty distinction,
+	thus matching input to toString() output.
+	
 2005-06-04  Audrius Meskauskas  <AudriusA@bluewin.ch>
 
 	* gnu/testlet/org/omg/CORBA/ORB/NEC_Corporation_RF11.java:
